progress log modified.